# codex-switch

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  update-homebrew-tap.yml
docs/design/: codex-switch-design.md
docs/superpowers/plans/: 2026-04-06-codex-switch.md
docs/superpowers/specs/: 2026-04-06-codex-switch-design.md
scripts/: render_homebrew_formula.py
src/codex_switch/: auth.py  cli.py  config.py  doctor.py  install.py  instances.py  models.py  paths.py  probe.py  rate_limits.py  routing.py  runtime.py  wizard.py  wrapper.py
tests/: conftest.py  test_auth.py  test_config.py  test_doctor.py  test_instances.py  test_integration_wrapper.py  test_probe.py  test_rate_limits.py  test_routing.py  test_runtime.py  test_smoke.py  test_wizard.py  test_wrapper.py
tests/helpers/: fake_codex.py
