[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-switch"
version = "0.1.0"
description = "Transparent account-aware wrapper for the Codex CLI"
requires-python = ">=3.11"
dependencies = ["typer>=0.12,<1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]

[project.scripts]
codex-switch = "codex_switch.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
