[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-switch-cli"
version = "0.1.3"
description = "Transparent account-aware wrapper for the Codex CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["typer>=0.12,<1.0"]

[project.urls]
Homepage = "https://github.com/ForeverHYX/codex-switch"
Repository = "https://github.com/ForeverHYX/codex-switch"
Issues = "https://github.com/ForeverHYX/codex-switch/issues"

[project.optional-dependencies]
dev = ["build>=1.2,<2.0", "pytest>=8.0,<9.0", "twine>=6.0,<7.0"]

[project.scripts]
codex-switch = "codex_switch.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
